
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct retro_keybind {size_t key; scalar_t__ valid; } ;
typedef int int16_t ;
struct TYPE_3__ {int key_state; } ;
typedef TYPE_1__ input_ctx_wayland_data_t ;


 scalar_t__ BIT_GET (int ,int ) ;
 unsigned int RARCH_BIND_LIST_END ;
 int input_conv_analog_id_to_bind_id (unsigned int,unsigned int,unsigned int,unsigned int) ;
 int * rarch_keysym_lut ;

__attribute__((used)) static int16_t input_wl_analog_pressed(input_ctx_wayland_data_t *wl,
      const struct retro_keybind *binds,
      unsigned idx, unsigned id)
{
   unsigned id_minus = 0;
   unsigned id_plus = 0;
   int16_t pressed_minus = 0;
   int16_t pressed_plus = 0;

   input_conv_analog_id_to_bind_id(idx, id, id_minus, id_plus);

   if (binds
         && binds[id_minus].valid
         && (id_minus < RARCH_BIND_LIST_END)
         && BIT_GET(wl->key_state, rarch_keysym_lut[binds[id_minus].key])
      )
      pressed_minus = -0x7fff;
   if (binds
         && binds[id_plus].valid
         && (id_plus < RARCH_BIND_LIST_END)
         && BIT_GET(wl->key_state, rarch_keysym_lut[binds[id_plus].key])
      )
      pressed_plus = 0x7fff;

   return pressed_plus + pressed_minus;
}
